--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-md-6 col-lg-7">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat. Proin libero ligula, gravida at porttitor eget.
+                                    With a passion for technology and a strong service-oriented mindset, I thrive on embracing challenges and driving innovation. My multidisciplinary background and commitment to community growth have shaped me into a dedicated team player, eager to make a positive impact. I enjoy collaborating with others to solve problems and create meaningful solutions. My journey in education and various projects has equipped me with the skills and enthusiasm to contribute effectively to any team.
                                 </p>
                                 <a class="btn" href="#">Hire Me</a>
                             </div>
@@ -471,10 +471,10 @@
                     <div class="content-inner">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <p>&copy; Copyright <a href="https://htmlcodex.com">HTML Codex</a>. All Rights Reserved</p>
+                                <p>&copy; Copyright Nuwan S. Medawaththa. All Rights Reserved</p>
                             </div>
                             <div class="col-md-6">
-                                <p>Powered by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                                
                             </div>
                         </div>
                     </div>
