--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
                         <p>Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et accusam ea et dolor sit.</p>
-                        
+                        <!--    
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
@@ -99,16 +99,17 @@
                             </div>
                         </div>
                     </section>
+                    -->
                     <!-- About End -->
 
-                    <!-- Skills Start -->
+                    <!-- Skills Start 
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Skills</h1>
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">HTML</p>
+                                        <p class="mb-2">Python</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
@@ -117,7 +118,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">CSS</p>
+                                        <p class="mb-2">R</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -146,7 +147,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Angular JS</p>
+                                        <p class="mb-2">React</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
@@ -155,7 +156,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Wordpress</p>
+                                        <p class="mb-2">SQL</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -165,27 +166,27 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Skills End -->
+                     Skills End -->
 
                     <!-- Expericence Start -->
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="title pb-3 mb-5">Expericence</h1>
+                        <h1 class="title pb-3 mb-5">Education</h1>
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
+                                <h5 class="mb-1">Bachelor of Science Honors in Plant Biotechnlogy</h5>
+                                <p class="mb-2">University of Colombo | <small>2020 - 2024</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
+                                <h5 class="mb-1">Bachelor of Information Technology (reading)</h5>
+                                <p class="mb-2">University of Colombo School of Computing | <small>2020 - 2024</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
+                                <h5 class="mb-1">Diploma in English</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
@@ -193,7 +194,7 @@
                     </section>
                     <!-- Expericence End -->
 
-                    <!-- Subscribe Start -->
+                    <!-- Subscribe Start 
                     <section class="wow fadeInUp" data-wow-delay="0.1s">
                         <div class="bg-secondary text-center p-5">
                             <h1 class="text-white font-weight-bold">Subscribe My Newsletter</h1>
@@ -204,7 +205,7 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Subscribe End -->
+                     Subscribe End -->
 
                     <!-- Services Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
@@ -213,21 +214,21 @@
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
-                                    <h5 class="mb-2">Web Design</h5>
+                                    <h5 class="mb-2">Research Software Engineering</h5>
                                     <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <i class="fab fa-2x fa-android mx-auto mb-4"></i>
-                                    <h5 class="mb-2">Apps Development</h5>
+                                    <i class="fab fa-2x fa-laptop-code mx-auto mb-4"></i>
+                                    <h5 class="mb-2">Biological Data Analysis</h5>
                                     <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-search mx-auto mb-4"></i>
-                                    <h5 class="mb-2">SEO</h5>
+                                    <h5 class="mb-2">Web Design</h5>
                                     <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
                                 </div>
                             </div>
@@ -242,7 +243,7 @@
                     </section>
                     <!-- Services End -->
 
-                    <!-- Portfolio Start -->
+                    <!-- Portfolio Start 
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Portfolio</h1>
                         <div class="row">
@@ -301,9 +302,9 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Portfolio End -->
+                     Portfolio End -->
 
-                    <!-- Testimonial Start -->
+                    <!-- Testimonial Start 
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">Testimonial</h1>
                         <div class="owl-carousel testimonial-carousel">
@@ -342,7 +343,7 @@
                             </div>
                         </div>
                     </section>
-                    <!-- Testimonial End -->
+                     Testimonial End -->
 
                     <!-- Contact Start -->
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
@@ -392,7 +393,7 @@
                             </div>
 							
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							<p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+							<p class="m-0">&copy; All Rights Reserved. Designed by <a href="#">Nuwan S. Medawaththa</a></p>
                         </div>
                     </section>
                     <!-- Footer End -->
