--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                    <!--<p>Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et accusam ea et dolor sit.</p>
-                    -->    
+                    <p>I have a deep interest in the intersection of biology, mathematics, and computer science, especially in computational and systems biology. I strongly believe in the power of science to make a difference and enlighten. I am passionate about sharing this love for science with others and encouraging a deep appreciation for scientific research and innovation.</p>
+                        
                     <!--    
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
